[project]
name = "mrcepid-runassociationtesting"
description = "A DNANexus app to perform genetic association"
readme = "Readme.md"
requires-python = "~=3.8.10"
dependencies = [
    "general-utilities",
]

[tool.uv.sources]
general-utilities = { git = "https://github.com/mrcepid-rap/general_utilities.git", branch = "bugfix/add_crrent_directory_as_mount_tested"}
