[project]
name = "mrcepid-runassociationtesting"
description = "A DNANexus app to perform genetic association"
readme = "Readme.md"
requires-python = "~=3.8.10"
dependencies = [
    "general-utilities",
]

[tool.uv.sources]
general-utilities = { git = "https://github.com/nalu357/general_utilities.git"}
